add api_key for intrinio

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
     <script type="text/javascript">
       window.API_OPTIONS = {
         intrinioApiId: "<%=ENV['INTRINIO_API_ID']%>",
-        intrinioApiKey: "<%= ENV['INTRINIO_API_KEY'] %>",
+        intrinioApiKey: "OjAyYTBjMzAzNjA2M2Q0OWYxM2Y3OTdhODAzYjJiZDE4"
         alphaVantageApiKey: "<%= ENV['ALPHAVANTAGE_API_KEY'] %>"
       };
     </script>
