--- a/app/assets/stylesheets/components/_chart.scss
+++ b/app/assets/stylesheets/components/_chart.scss
@@ -121,7 +121,7 @@
   justify-content: center;
   position: absolute;
   right: 0;
-  width: 150px;
+  min-width: 150px;
   font-size: 14px;
   padding: 12px 20px 10px 14px;
   border-radius: 20px;
@@ -147,7 +147,8 @@
 .fa-eye {
   width: 20px;
   height: 20px;
-  font-size: 30px;
+  font-size: 18px;
+  margin-right:8px;
 }
 
 .line-chart-container {
